@@ -2089,11 +2089,10 @@ namespace aux {
 #endif
 			return;
 		}
-		if (flags & session::listen_reuse_address)
-		{
-			error_code err; // ignore errors here
-			s->sock->set_option(socket_acceptor::reuse_address(true), err);
-		}
+
+		error_code err; // ignore errors here
+		s->sock->set_option(socket_acceptor::reuse_address(true), err);
+
 #if TORRENT_USE_IPV6
 		if (ep.protocol() == tcp::v6())
 		{
